@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.2 2018/04/07 21:06:34 minskim Exp $
+$NetBSD: distinfo,v 1.3 2019/07/31 20:42:03 brook Exp $
 
-SHA1 (R/pillar_1.2.1.tar.gz) = 0bb68f0ab5c2eb6c2a3a2e2a74f82194a3a645b3
-RMD160 (R/pillar_1.2.1.tar.gz) = 5e024124b1a784b41903c17228c52d5925a95a36
-SHA512 (R/pillar_1.2.1.tar.gz) = 42e3d9010b9bf1065843a14364fd6a3868467e79913ab80e2cff4846ebbd64b53cb4ea9450796e30d890bbc872dc5d965efeb500937ce77d7acff3b772154e31
-Size (R/pillar_1.2.1.tar.gz) = 54830 bytes
+SHA1 (R/pillar_1.4.2.tar.gz) = 6af37a45b8539fed426eee850ceb460cf50799ac
+RMD160 (R/pillar_1.4.2.tar.gz) = 9f0c696fc2a25de56d7f5a4e894b76005e7dda6c
+SHA512 (R/pillar_1.4.2.tar.gz) = 6ec4f1cdb4c5ac80f549c7e388beec59605a85758b3e9c6e7845e3af74303d6c0c3b8dd30f435e4361a2b3c11247baba57008772bbf17049276b34af45212d08
+Size (R/pillar_1.4.2.tar.gz) = 228815 bytes
